update crm/controller startup. add vm command testcase  Changes to be committed: 	modified:   edgecloud_controller_eu_start.yaml 	modified:   edgecloud_controller_start.yaml 	modified:   edgecloud_crmattattcloud1_start.yaml 	modified:   edgecloud_crmazurecentral_start.yaml 	modified:   edgecloud_crmazurecloud1_start.yaml 	modified:   edgecloud_crmbonn_start.yaml 	modified:   edgecloud_crmgcpcentral_start.yaml 	modified:   edgecloud_crmgcpcloud1_start.yaml 	modified:   edgecloud_crmhamburg_start.yaml 	modified:   edgecloud_crmtmustmocloud10_start.yaml 	modified:   edgecloud_crmtmustmocloud1_start.yaml 	modified:   edgecloud_crmtmustmocloud2_start.yaml 	modified:   edgecloud_crmtmustmocloud3_start.yaml 	modified:   edgecloud_crmtmustmocloud4_start.yaml 	modified:   edgecloud_crmtmustmocloud5_start.yaml 	modified:   edgecloud_crmtmustmocloud6_start.yaml 	modified:   edgecloud_crmtmustmocloud7_start.yaml 	modified:   edgecloud_crmtmustmocloud8_start.yaml 	modified:   edgecloud_crmtmustmocloud9_start.yaml 	modified:   ../testcases/crm/app/fqdn_udptcp_port_openstack_vm.robot

--- a/jenkins/edgecloud_crmgcpcentral_start.yaml
+++ b/jenkins/edgecloud_crmgcpcentral_start.yaml
@@ -37,8 +37,6 @@ spec:
          - name: VAULT_SECRET_ID
            value: 6e88cd75-7297-ba5e-6b27-9d612e3792b7
         args:
-         - "--apiAddr"
-         - "0.0.0.0:55100"
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"gcp\"},\"name\":\"automationGcpCentralCloudlet\"}"
          - "--notifyAddrs"
@@ -46,7 +44,7 @@ spec:
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--platform"
-         - "gcp"
+         - "PLATFORM_TYPE_GCP"
          - "--vaultAddr"
          - "vault.mobiledgex.net"
          - "--d"
