--- a/jenkins/edgecloud_crmbonn_start.yaml
+++ b/jenkins/edgecloud_crmbonn_start.yaml
@@ -39,14 +39,12 @@ spec:
          - name: VAULT_SECRET_ID
            value: 6e88cd75-7297-ba5e-6b27-9d612e3792b7
         args:
-         - "--apiAddr"
-         - "0.0.0.0:50051"
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"TDG\"},\"name\":\"automationBonnCloudlet\"}"
          - "--notifyAddrs"
          - "controller:37001"
          - "--platform"
-         - "openstack"
+         - "PLATFORM_TYPE_OPENSTACK"
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--vaultAddr"
