--- a/jenkins/edgecloud_crmbonn_start.yaml
+++ b/jenkins/edgecloud_crmbonn_start.yaml
@@ -33,11 +33,11 @@ spec:
          - name: MEX_EXT_NETWORK
            value: external-network-shared
          - name: MEXENV_URL
-           value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
+           value: https://vault-qa.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
          - name: VAULT_ROLE_ID
-           value: e017fc39-dff7-adc3-364f-bb8e04805454
+           value: ca425b55-53a4-6fcd-fc27-9f0bd1ee2e92
          - name: VAULT_SECRET_ID
-           value: 6e88cd75-7297-ba5e-6b27-9d612e3792b7
+           value: 52baef16-b4ea-7b85-aca8-df3fa5eb9d41
         args:
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"TDG\"},\"name\":\"automationBonnCloudlet\"}"
@@ -48,7 +48,7 @@ spec:
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--vaultAddr"
-         - "vault.mobiledgex.net"
+         - "https://vault-qa.mobiledgex.net:8200"
          - "--physicalName"
          - "bonn"
          - "--d"
