--- a/jenkins/edgecloud_dmebuckhorn_start.yaml
+++ b/jenkins/edgecloud_dmebuckhorn_start.yaml
@@ -44,9 +44,9 @@ spec:
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--tlsApiCertFile"
-         - "/root/tls/mex-server.crt"
+         - "/tls/tls.crt"
          - "--tlsApiKeyFile"
-         - "/root/tls/mex-server.key"
+         - "/tls/tls.key"
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"GDDT\"},\"name\":\"automationBuckhornCloudlet\"}"
         env:
@@ -58,7 +58,14 @@ spec:
            value: b95e3309-5964-89a2-5647-e86f745f20c7
          - name: VAULT_SECRET_ID
            value: ***REMOVED***
+        volumeMounts:
+         - name: tls
+           mountPath: /tls
       imagePullSecrets:
        - name: mexreg-secret 
+      volumes:
+      - name: tls
+        secret:
+          secretName: automation-dme-certs
 
 
