--- a/jenkins/edgecloud_crmgcpcentral_start.yaml
+++ b/jenkins/edgecloud_crmgcpcentral_start.yaml
@@ -33,9 +33,9 @@ spec:
          - name: MEX_GCP_ZONE
            value: us-central1-c
          - name: VAULT_ROLE_ID
-           value: e017fc39-dff7-adc3-364f-bb8e04805454
+           value: ca425b55-53a4-6fcd-fc27-9f0bd1ee2e92 
          - name: VAULT_SECRET_ID
-           value: 6e88cd75-7297-ba5e-6b27-9d612e3792b7
+           value: 52baef16-b4ea-7b85-aca8-df3fa5eb9d41 
         args:
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"gcp\"},\"name\":\"automationGcpCentralCloudlet\"}"
@@ -46,7 +46,9 @@ spec:
          - "--platform"
          - "PLATFORM_TYPE_GCP"
          - "--vaultAddr"
-         - "vault.mobiledgex.net"
+         - "https://vault-qa.mobiledgex.net:8200"
+         - "--physicalName"
+         - "gcp"
          - "--d"
          - "api,notify,mexos"
       imagePullSecrets:
