--- a/jenkins/edgecloud_crmazurecentral_start.yaml
+++ b/jenkins/edgecloud_crmazurecentral_start.yaml
@@ -27,15 +27,15 @@ spec:
          - name: PATH
            value: /tmp/google-cloud-sdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/root/bin
          - name: MEXENV_URL
-           value: https://vault.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
+           value: https://vault-qa.mobiledgex.net/v1/secret/data/cloudlet/openstack/mexenv.json
          - name: CLOUDLET_KIND
            value: azure
          - name: MEX_AZURE_LOCATION
            value: centralus
          - name: VAULT_ROLE_ID
-           value: e017fc39-dff7-adc3-364f-bb8e04805454
+           value: ca425b55-53a4-6fcd-fc27-9f0bd1ee2e92 
          - name: VAULT_SECRET_ID
-           value: ***REMOVED***
+           value: ***REMOVED*** 
         args:
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"azure\"},\"name\":\"automationAzureCentralCloudlet\"}"
@@ -46,7 +46,9 @@ spec:
          - "--tls"
          - "/root/tls/mex-server.crt"
          - "--vaultAddr"
-         - "vault.mobiledgex.net"
+         - "https://vault-qa.mobiledgex.net:8200"
+         - "--physicalName"
+         - "azure"
          - "--d"
          - "api,notify,mexos"
       imagePullSecrets:
