add jaeger stuff  Changes to be committed: 	new file:   ../../../jenkins/docker-compose.yaml.jaeger 	modified:   ../../../jenkins/edgecloud_controller_eu_start.yaml 	modified:   ../../../jenkins/edgecloud_controller_start.yaml 	modified:   ../../../jenkins/edgecloud_dmebuckhorn_start.yaml 	modified:   ../../../jenkins/edgecloud_mc_start.yaml 	new file:   ../../../jenkins/nginx.conf 	new file:   ../../config/server_ping_threaded_cloudconfig.yml 	new file:   ../../config/server_ping_threaded_compose.yml 	new file:   ../../config/server_ping_threaded_udptcphttp.yml 	new file:   ../../config/server_ping_threaded_udptcphttp_volumemount.yml

--- a/jenkins/edgecloud_controller_eu_start.yaml
+++ b/jenkins/edgecloud_controller_eu_start.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: controllereu
     spec:
+       hostAliases:
+       - ip: "40.122.108.233"
+         hostnames:
+         - "automationjaeger.mobiledgex.net"
        containers:
        - name: controllereu
          image: registry.mobiledgex.net:5000/mobiledgex/edge-cloud:$AUTOMATION_DOCKERTAG
@@ -50,5 +54,7 @@ spec:
             value: 1c2a5271-31af-96e9-da03-b3f63d7fd628
           - name: VAULT_SECRET_ID
             value: ed7f877a-1528-78e2-3610-f007606601ae
+          - name: JAEGER_ENDPOINT
+            value: https://automationjaeger.mobiledgex.net:14270/api/traces
        imagePullSecrets:
         - name: mexreg-secret
