add jaegerAddr to mc  Changes to be committed: 	modified:   edgecloud_mc_start.yaml

--- a/jenkins/edgecloud_mc_start.yaml
+++ b/jenkins/edgecloud_mc_start.yaml
@@ -54,6 +54,8 @@ spec:
           - "https://gitlab-qa.mobiledgex.net"
           - "--artifactoryAddr"
           - "https://artifactory-qa.mobiledgex.net"
+          - "--jaegerAddr"
+          - "https://automationjaeger.mobiledgex.net:16686"
          env:
           - name: VAULT_ROLE_ID
             value: fe150a80-ab52-322a-3b47-771c0e27b9fb 
