--- a/jenkins/edgecloud_crmbuckhorn_start.yaml
+++ b/jenkins/edgecloud_crmbuckhorn_start.yaml
@@ -38,6 +38,8 @@ spec:
            value: ca425b55-53a4-6fcd-fc27-9f0bd1ee2e92
          - name: VAULT_SECRET_ID
            value: ***REMOVED***
+         - name: FLAVOR_MATCH_PATTERN
+           value: m4
         args:
          - "--cloudletKey"
          - "{\"operator_key\":{\"name\":\"GDDT\"},\"name\":\"automationBuckhornCloudlet\"}"
