--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -67,6 +67,6 @@ spec:
           - name: VAULT_CRM_SECRET_ID
             value: 52baef16-b4ea-7b85-aca8-df3fa5eb9d41
           - name: JAEGER_ENDPOINT
-            value: https://automationjaeger.mobiledgex.net:14270/api/traces
+            value: https://jaeger-qa.mobiledgex.net:14268/api/traces
        imagePullSecrets:
         - name: mexreg-secret
