update jenkins for jaeger update cluster test  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_controller_start.yaml 	modified:   ../../../jenkins/edgecloud_mc_start.yaml 	modified:   ../cluster/createClusterInstance_openstack_IpAccessDedicated_numNodes.robot

--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -67,6 +67,6 @@ spec:
           - name: VAULT_CRM_SECRET_ID
             value: ***REMOVED***
           - name: JAEGER_ENDPOINT
-            value: https://automationjaeger.mobiledgex.net:14270/api/traces
+            value: https://jaeger-qa.mobiledgex.net:14268/api/traces
        imagePullSecrets:
         - name: mexreg-secret
