update manifest tests  Changes to be committed: 	modified:   ../../config/server_ping_threaded_udptcphttp.yml 	modified:   ../../config/server_ping_threaded_udptcphttp_volumemount.yml 	modified:   create_appInst_manifestFail.robot 	modified:   fqdn_udptcp_port_openstack_reboot.robot

--- a/testcases/config/server_ping_threaded_udptcphttp_volumemount.yml
+++ b/testcases/config/server_ping_threaded_udptcphttp_volumemount.yml
@@ -88,10 +88,10 @@ spec:
         run: server-ping-threaded-udptcphttpapp
     spec:
       imagePullSecrets:
-      - name: docker.mobiledgex.net
+      - name: docker-qa.mobiledgex.net
       containers:
       - name: server-ping-threaded-udptcphttpapp
-        image: docker.mobiledgex.net/mobiledgex/images/server_ping_threaded:5.0
+        image: docker-qa.mobiledgex.net/mobiledgex/images/server_ping_threaded:5.0
         imagePullPolicy: Always
         ports:
         - containerPort: 2016
