rename unsupported cluster testcases  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_clustersvc_start.yaml 	renamed:    test_clusterInstAddMultiControllers.py -> notrunning_test_clusterInstAddMultiControllers.py 	modified:   test_clusterInstDelete.py 	renamed:    test_clusterAddMultiControllers.py -> unsupported_test_clusterAddMultiControllers.py 	renamed:    test_clusterAdd_100.py -> unsupported_test_clusterAdd_100.py 	renamed:    test_clusterAdd_AutoCluster.py -> unsupported_test_clusterAdd_AutoCluster.py 	renamed:    test_clusterAdd_InvalidClusterName.py -> unsupported_test_clusterAdd_InvalidClusterName.py 	renamed:    test_clusterAdd_defaultFlavor.py -> unsupported_test_clusterAdd_defaultFlavor.py 	renamed:    test_clusterAdd_defaultFlavorNotExist.py -> unsupported_test_clusterAdd_defaultFlavorNotExist.py 	renamed:    test_clusterAdd_noDefaultFlavor.py -> unsupported_test_clusterAdd_noDefaultFlavor.py 	renamed:    test_clusterAdd_noName.py -> unsupported_test_clusterAdd_noName.py 	renamed:    test_clusterDelete_beforeApp.py -> unsupported_test_clusterDelete_beforeApp.py 	renamed:    test_clusterDelete_beforeClusterInst.py -> unsupported_test_clusterDelete_beforeClusterInst.py 	renamed:    test_clusterDelete_invalidName.py -> unsupported_test_clusterDelete_invalidName.py 	renamed:    test_clusterDelete_nameNotFound.py -> unsupported_test_clusterDelete_nameNotFound.py 	renamed:    test_clusterDelete_noName.py -> unsupported_test_clusterDelete_noName.py 	renamed:    test_clusterUpdate_notSupported.py -> unsupported_test_clusterUpdate_notSupported.py

--- a/jenkins/edgecloud_clustersvc_start.yaml
+++ b/jenkins/edgecloud_clustersvc_start.yaml
@@ -28,5 +28,8 @@ spec:
          - "mexos,notify"
          - "--tls"
          - "/root/tls/mex-server.crt"
+        env:
+         - name: JAEGER_ENDPOINT
+           value: https://jaeger-qa.mobiledgex.net:14268/api/traces
       imagePullSecrets:
        - name: mexreg-secret
