git add mex-ca.key  Changes to be committed: 	new file:   mex-ca.key 	modified:   ../jenkins/edgecloud_crmgcpcentral_start.yaml

--- a/jenkins/edgecloud_crmgcpcentral_start.yaml
+++ b/jenkins/edgecloud_crmgcpcentral_start.yaml
@@ -46,7 +46,7 @@ spec:
          - "--platform"
          - "PLATFORM_TYPE_GCP"
          - "--vaultAddr"
-         - "https://vault-qa.mobiledgex.net:8200"
+         - "vault-qa.mobiledgex.net:8200"
          - "--physicalName"
          - "gcp"
          - "--d"
