--- a/jenkins/edgecloud_clustersvc_start.yaml
+++ b/jenkins/edgecloud_clustersvc_start.yaml
@@ -25,7 +25,7 @@ spec:
          - "--ctrlAddrs"
          - "controller:55001"
          - "--d"
-         - "mexos,notify"
+         - "mexos,notify,api,metrics"
          - "--tls"
          - "/root/tls/mex-server.crt"
         env:
