update jenkins controller for new parms  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_controller_eu_start.yaml 	modified:   ../../../jenkins/edgecloud_controller_start.yaml

--- a/jenkins/edgecloud_controller_eu_start.yaml
+++ b/jenkins/edgecloud_controller_eu_start.yaml
@@ -39,13 +39,21 @@ spec:
           - "--region"
           - "EU"
           - "--vaultAddr"
-          - "https://vault-qa.mobiledgex.net:8200"
+          - "https://vault-qa.mobiledgex.net:8200
+          - "--registryFQDN"
+          - "docker-qa.mobiledgex.net"
+          - "--artifactoryFQDN"
+          - "https://artifactory-qa.mobiledgex.net/artifactory"
+          - "--cloudletRegistryPath"
+          - "registry.mobiledgex.net:5000/mobiledgex/edge-cloud"
+          - "--cloudletVMImagePath"
+          - "https://artifactory-qa.mobiledgex.net/artifactory/baseimages/mobiledgex-v2.0.3.qcow2#md5:fc13f750dd69c389dc7641ff8e6619ce"
           - "--versionTag"
           - "$AUTOMATION_DOCKERTAG"
           - "--tls"
           - "/root/tls/mex-server.crt"
           - "--influxAddr"
-          - "http://35.247.126.154:8086"
+          - "http://35.202.161.23:8086"
           - "-d"
           - "etcd,api,notify"
           - "-autoUpgrade"
