--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -46,6 +46,8 @@ spec:
           - "docker-qa.mobiledgex.net"
           - "--artifactoryFQDN"
           - "https://artifactory-qa.mobiledgex.net/artifactory"
+          - "--cloudletRegistryPath"
+          - "registry.mobiledgex.net:5000/mobiledgex/edge-cloud"
           - "--cloudletVMImagePath"
           - "https://artifactory-qa.mobiledgex.net/artifactory/baseimages/mobiledgex-v2.0.3.qcow2#md5:fc13f750dd69c389dc7641ff8e6619ce"
           - "--versionTag"
