add mexos log option to controller  Changes to be committed: 	modified:   ../../../jenkins/edgecloud_controller_eu_start.yaml 	modified:   ../../../jenkins/edgecloud_controller_start.yaml

--- a/jenkins/edgecloud_controller_start.yaml
+++ b/jenkins/edgecloud_controller_start.yaml
@@ -57,7 +57,7 @@ spec:
           - "--influxAddr"
           - "http://35.202.161.23:8086"
           - "-d"
-          - "etcd,api,notify"
+          - "etcd,api,notify,mexos"
           - "-autoUpgrade"
          env:
           - name: VAULT_ROLE_ID
