--- a/jenkins/edgecloud_dmebuckhorn_start.yaml
+++ b/jenkins/edgecloud_dmebuckhorn_start.yaml
@@ -63,7 +63,7 @@ spec:
          - name: VAULT_SECRET_ID
            value: ***REMOVED***
          - name: JAEGER_ENDPOINT
-           value: https://automationjaeger.mobiledgex.net:14270/api/traces
+           value: https://jaeger-qa.mobiledgex.net:14268/api/traces
         volumeMounts:
          - name: tls
            mountPath: /tls
